--- a/res/layout/add_pay.xml
+++ b/res/layout/add_pay.xml
@@ -57,7 +57,7 @@
         android:layout_marginTop="20dp" >
 
         <TextView
-            android:id="@+id/textView4"
+            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
@@ -65,6 +65,7 @@
             android:text="路桥费:" />
 
         <EditText
+            android:id="@+id/pay_road"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp" />
@@ -77,7 +78,7 @@
         android:layout_marginRight="60dp" >
 
         <TextView
-            android:id="@+id/textView5"
+            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
@@ -85,6 +86,7 @@
             android:text="停车费:" />
 
         <EditText
+            android:id="@+id/pay_parking"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp" />
@@ -97,7 +99,7 @@
         android:layout_marginRight="60dp" >
 
         <TextView
-            android:id="@+id/textView6"
+            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
@@ -105,6 +107,7 @@
             android:text="误餐费:" />
 
         <EditText
+            android:id="@+id/pay_eat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp" />
@@ -117,7 +120,7 @@
         android:layout_marginRight="60dp" >
 
         <TextView
-            android:id="@+id/textView7"
+            
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="其他备注:"
@@ -125,6 +128,7 @@
             android:textSize="20dp" />
 
         <EditText
+            android:id="@+id/pay_other"
             android:layout_width="match_parent"
             android:layout_height="116dp"
             android:maxLines="5"
@@ -139,6 +143,7 @@
         android:background="#000000" />
 
      <Button
+         android:id="@+id/bt_save"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:gravity="center_vertical"
