--- a/res/layout/business_list.xml
+++ b/res/layout/business_list.xml
@@ -59,7 +59,7 @@
         android:textSize="20dp" />
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/listView_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
