--- a/res/layout/order_detail_end.xml
+++ b/res/layout/order_detail_end.xml
@@ -350,6 +350,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/add_pay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -412,6 +413,7 @@
         android:background="#000000" />
 
      <Button
+         android:id="@+id/confirm_end"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:gravity="center_vertical"
