--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -27,6 +27,7 @@
                 android:textSize="16dp" />
 
             <TextView
+                android:id="@+id/item_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2015/10/25 9:00"
@@ -45,6 +46,7 @@
                 android:textSize="16dp" />
 
             <TextView
+                android:id="@+id/item_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SR20151025000001"
@@ -63,6 +65,7 @@
                 android:textSize="16dp" />
 
             <TextView
+                android:id="@+id/item_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="机场接机"
@@ -81,6 +84,7 @@
                 android:textSize="16dp" />
 
             <TextView
+                android:id="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="王先生"
@@ -99,6 +103,7 @@
                 android:textSize="16dp" />
 
             <TextView
+                android:id="@+id/item_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="13000000000"
@@ -123,6 +128,7 @@
                 android:textSize="16dp" />
 
             <TextView
+                android:id="@+id/item_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="浦东机场T2航站楼"
@@ -142,6 +148,7 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:gravity="center_vertical"
+        android:focusable="false"
         android:text="订单详情"
         android:textSize="16dp" />
 
